tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__WalkingisTooHard-AAAAAAAAAAAAAAAAAAAFeA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1400,
  "prerequisites": [
    1378
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Blink is a very powerful focus that allows its user to teleport anywhere in sight, as long as the destination is less than 50 blocks away. There is no teleport cooldown, so it can be used to travel very quickly in the right conditions.\n\n[note]This focus accepts the following upgrade in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Walking is Too Hard...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1378
  ],
  "rewards": [],
  "tasks": []
}
