tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__WandFocusShadowB-AAAAAAAAAAAAAAAAAAAFcA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1392,
  "prerequisites": [
    1388,
    1373,
    1374
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Shadowbeam shoots a beam of dark energy that is reflected by any block and damages everything it passes through. The beam travels about 40 blocks and does about 100 damage.\n\n[note]This focus accepts the following upgrades in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level\n§5Potency§r: Increases damage dealt every level",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wand Focus Shadow Beam",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1388,
    1373,
    1374
  ],
  "rewards": [],
  "tasks": []
}
