tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__WeaponizedBlight-AAAAAAAAAAAAAAAAAAAFcQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1393,
  "prerequisites": [
    1380,
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Tainted Storm will emit a stream of tainted bubbles which damage anything in a short distance and inflict Poison for 5 seconds. The focus may also debuff the caster with Flux Flu III for 50 seconds.\n\n[note]This focus accepts the following upgrades in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level\n§5Potency§r: Increases damage dealt and increases the number of bubbles every level\n§5Tainturgy§r (level 3): The caster will no longer get Flux Flu. This adds 0.6 Ordo to the casting cost\n§5Enlarge§r (level 4): The tainted bubbles fan out across a wider area. This adds 0.6 Aer and Aqua to the casting cost\n§5Corrosive§r (level 5): The tainted bubbles inflict the Wither effect instead of Poison. This adds 0.6 Perditio and Ignis to the casting cost",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Weaponized Blight",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1380,
    238
  ],
  "rewards": [],
  "tasks": []
}
